--- a/pages/systemInfo/systemInfo.wxss
+++ b/pages/systemInfo/systemInfo.wxss
@@ -5,7 +5,7 @@
   display: flex;
   height: 80rpx;
   line-height: 80rpx;
-  border-bottom: 1px solid #666;
+  /*border-bottom: 1px solid #666;*/
   padding: 0 20rpx;
   justify-content: space-between;
   align-items: center;
