--- a/pages/personInfo/personInfo.wxss
+++ b/pages/personInfo/personInfo.wxss
@@ -4,7 +4,7 @@ page {
 .container {
   background-color: #eee;
   height: 100%;
-  padding: 30rpx 30rpx 0;
+  padding: 30rpx 5% 0;
 }
 .item {
   display: flex;
@@ -29,7 +29,6 @@ page {
 .btn {
   position: absolute;
   bottom: 60rpx;
-  margin: 20rpx 5% 0;
   width: 90%;
   height: 80rpx;
   line-height: 80rpx;
