--- a/pages/common/movie-list.wxss
+++ b/pages/common/movie-list.wxss
@@ -1,10 +1,13 @@
 .list{
 	width: 100%;
 	height: 100%;
+	background: #eee;
 }
 .item {
 	display: flex;
-	margin: 0 20rpx;
+	margin: 10rpx 0;
+	color: #333;
+	background: #fff;
 	padding: 20rpx 40rpx;
 	border-bottom: 1px solid #ccc;
 	cursor: pointer;
@@ -13,44 +16,39 @@
 .poster {
 	flex-basis: 128rpx;
 	width: 128rpx;
-	height: 140rpx;
+	height: 160rpx;
+	border-radius: 4rpx;
 	margin-right: 20rpx;
 }
 .meta{
 	flex: 1;
 	min-width: 0;
-	overflow: hidden;
-	margin-right: 20rpx;
 }
-.title, .sub-title {
-	display: block;
+.title, .sub-title, .rating {
 	margin-bottom: 10rpx;
 }
 .title {
 	font-size: 28rpx;
+	color: #000;
 	font-weight: bold;
 }
-.sub-title {
-	font-size: 24rpx;
+.year {
+	font-size: 26rpx;
 	color: #c0c0c0;
 }
-.artists {
-	font-size: 22rpx;
-	color: #999;
-}
 .rating {
-	flex-basis: 40rpx;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
 .rating text {
-	display: inline-block;
-	width: 40rpx;
-	background-color: #800002;
-	color: #fff;
+	margin-left: 15rpx;
+	line-height: 20rpx;
+	font-size: 20rpx;
+	color: #c0c0c0;
+}
+.info {
 	font-size: 24rpx;
-	border-radius: 8rpx;
-	font-weight: bold;
-	text-align:center;
-	padding: 10rpx;
 }
 .tips {
 	display: flex;
