--- a/pages/item/item.wxss
+++ b/pages/item/item.wxss
@@ -1,3 +1,9 @@
+.pdl30 {
+	padding: 0 30rpx;
+}
+.mgl30 {
+	margin: 0 30rpx;
+}
 .background {
 	position: fixed;
 	top:0;
@@ -5,51 +11,175 @@
 	width:100%;
 	height:100%;
 	opacity:0.2;
-	filter: blur(10px);
+	filter: blur(100px);
 	z-index:-1;
 }
 .img {
 	width:100%;
 	height: 100%;
 }
-.meta {
-	width: 80%;
-	padding-left: 10%;
-	/*padding: 50rpx 40rpx;*/
-	font-size:0;
-}
-.poster{
+.box {
+	box-sizing: border-box;
 	width: 100%;
-	height: 600rpx;
-	margin: 20rpx 0;
+	margin: 30rpx 0;
 }
-.title{
+.info-box {
+	display: flex;
+}
+.poster {
+	width: 230rpx;
+	height: 300rpx;
+	margin-right: 30rpx;
+	box-shadow: 4px 4px 10px #000;
+}
+.info-wrapper {
+	flex: 1;
+	color: #000;
+	font-weight: 600;
+}
+.info-title {
 	display: block;
-	text-align: center;
-	margin-bottom: 10rpx;
-	font-size: 30rpx;
+	font-size: 36rpx;
+	margin-bottom: 20rpx;
+}
+.origin-title {
+	display: block;
+	font-size: 26rpx;
+	margin-bottom: 8rpx;
 }
 .info {
-	display: inline-block;
-	width:80%;
-	color:#9A9999;
-	font-size: 25rpx;
-	margin: 10rpx 20rpx;
+	font-size: 22rpx;
+	color: #c0c0c0;
+	font-weight: normal;
 }
 .summary {
-	width: 80%;
-	padding: 40rpx 10%;
 }
 .label{
 	display: inline-block;
 	width: 100%;
 	color: #000;
 	font-size: 30rpx;
-	margin-bottom: 15rpx;
+	font-weight: 600;
+	margin-bottom: 10rpx;
 }
 .content {
 	margin-top: 5rpx;
 	line-height: 30rpx;
-	font-size: 25rpx;
-	color:#5B5B5B;
+	font-size: 26rpx;
+	color:#000;
+}
+.title {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 10rpx;
+	height: 60rpx;
+	line-height: 60rpx;
+}
+.title text {
+	font-size: 30rpx;
+	font-weight: 600;
+}
+.more-text {
+	font-size: 24rpx;
+	font-weight: normal;
+	margin-right: 5rpx;
+}
+.more-icon {
+	font-size: 26rpx;
+}
+.actors-content {
+	height: 320rpx;
+}
+.inner {
+	box-sizing: border-box;
+	width: 750rpx;
+	display: flex;
+	flex-direction: row;
+}
+.actor {
+	display: flex;
+	flex-direction: column;
+	width: 180rpx;
+	color: #000;
+	margin: 0 10rpx;
+}
+.actor-avatar {
+	width: 100%;
+	height: 230rpx;
+	margin-bottom: 10rpx;
+	border-radius: 10rpx;
+}
+.actor-name {
+	width: 160rpx;
+	font-size: 26rpx;
+	font-weight: 600;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow:ellipsis;
+}
+.actor-role {
+	font-size: 24rpx;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+.comments-box {
+	background: rgba(0,0,0,0.6);
+	margin-left: 30rpx;
+	margin-right: 30rpx;
+	border-radius: 10rpx;
+	padding-top: 10rpx;
+	color: #fff;
+}
+.comments-wrapper {
+	margin-top: 5rpx;
+}
+.comment-item {
+	padding: 20rpx 0;
+	border-bottom: 1rpx solid #fff;
+}
+.comment-meta {
+	display: flex;
+	height: 60rpx;
+	margin-bottom: 30rpx;
+}
+.comment-avatar {
+	width: 60rpx;
+	height: 60rpx;
+	flex: 0 0 60rpx;
+	border-radius: 50%;
+	margin-right: 20rpx;
+}
+.comment-info {
+	flex: 1;
+	flex-direction: column;
+}
+.comment-info .name {
+	font-size: 26rpx;
+	font-weight: 600;
+	margin-bottom: 5rpx;
+	height: 26rpx;
+	line-height: 26rpx;
+}
+.comment-info .info {
+	display: flex;
+	align-items: center;
+	color: #fff;
+}
+.comment-date {
+	margin-left: 10rpx;
+	font-size: 24rpx;
+}
+.comment-content {
+	font-size: 26rpx;
+	line-height: 30rpx;
+	margin-bottom: 20rpx;
+}
+.comment-like {
+	font-size: 24rpx;
+	color: #fff;
+}
+.like-icon {
+	font-size: 26rpx;
+	margin-right: 10rpx;
 }
