--- a/pages/list/list.wxss
+++ b/pages/list/list.wxss
@@ -1,1 +1,21 @@
 @import '../common/movie-list.wxss'
+
+.header {
+  width: 100%;
+  height: 200rpx;
+  background:#333;
+  display: flex;
+  align-items: center;
+}
+.header-title {
+  padding-left: 40rpx;
+  font-size: 40rpx;
+  font-weight: 600;
+  color: #fff;
+}
+.Fix {
+  position: fixed;
+  top: 0;
+  margin-top: 0;
+  z-index: 99999;
+}
